--- a/package.yaml
+++ b/package.yaml
@@ -27,12 +27,14 @@ dependencies:
 - aeson-qq >= 0.8.3 && < 1
 - composition >= 1.0.2.1 && < 2
 - extra >= 1.6.17 && < 2
+# - generic-lens
 - hashable >= 1.3.0.0 && < 2
 - hedgehog >= 1.0.4 && < 2
 - lens
 - lens-aeson
 - lucid >= 2.9.11 && < 3
 - mtl >= 2.2.2 && < 3
+- streaming
 - text >= 1.2.3.1 && < 2
 - unordered-containers >= 0.2.13.0 && < 1
 - vector >= 0.12.1.2 && < 1
