--- a/liveview-simple.cabal
+++ b/liveview-simple.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 69e5a41ae20b4c630c9c3645ee9fb1d7d51d0e59d8b44bd90f4ff0f9cf3aa427
+-- hash: 6db889fdf8863494842045d32bcbc58e595353ee35b5770328721f01d58a0be3
 
 name:           liveview-simple
 version:        0.1.0.0
@@ -29,6 +29,7 @@ library
   exposed-modules:
       Import
       Lib
+      LiveView.Fixtures
       LiveView.Html
       LiveView.Serving
   other-modules:
@@ -61,6 +62,7 @@ executable liveview-simple-exe
       Paths_liveview_simple
   hs-source-dirs:
       app
+  default-extensions: EmptyCase PostfixOperators TupleSections ImportQualifiedPost NamedFieldPuns BangPatterns BinaryLiterals HexFloatLiterals NumericUnderscores GADTSyntax RankNTypes TypeApplications PolyKinds StandaloneKindSignatures ExistentialQuantification TypeOperators ConstraintKinds ExplicitForAll KindSignatures NamedWildCards ScopedTypeVariables FlexibleContexts FlexibleInstances MultiParamTypeClasses ConstrainedClassMethods InstanceSigs TypeSynonymInstances DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveTraversable StandaloneDeriving EmptyDataDeriving DeriveLift GeneralisedNewtypeDeriving DeriveGeneric LambdaCase NamedFieldPuns TupleSections
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Diff >=0.3.4 && <1
@@ -89,6 +91,7 @@ test-suite liveview-simple-test
       Paths_liveview_simple
   hs-source-dirs:
       test
+  default-extensions: EmptyCase PostfixOperators TupleSections ImportQualifiedPost NamedFieldPuns BangPatterns BinaryLiterals HexFloatLiterals NumericUnderscores GADTSyntax RankNTypes TypeApplications PolyKinds StandaloneKindSignatures ExistentialQuantification TypeOperators ConstraintKinds ExplicitForAll KindSignatures NamedWildCards ScopedTypeVariables FlexibleContexts FlexibleInstances MultiParamTypeClasses ConstrainedClassMethods InstanceSigs TypeSynonymInstances DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveTraversable StandaloneDeriving EmptyDataDeriving DeriveLift GeneralisedNewtypeDeriving DeriveGeneric LambdaCase NamedFieldPuns TupleSections
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Diff >=0.3.4 && <1
