--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tsc --build src/tsconfig.json && npx jest"
+    "test": "tsc --build tsconfig.json && jest",
+    "build": "esbuild src/index.ts --bundle --outfile=out.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,9 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "core-js": "^3.9.1"
+    "core-js": "^3.9.1",
+    "esbuild": "^0.8.57",
+    "hkts": "^0.3.1",
+    "morphdom": "^2.6.1"
   }
 }
