--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tsc --build tsconfig.json && jest",
-    "build": "esbuild src/index.ts --bundle --outfile=out.js"
+    "build": "tsc --noemit && esbuild src/index.ts --bundle --outfile=out.js"
   },
   "repository": {
     "type": "git",
