--- a/package.yaml
+++ b/package.yaml
@@ -25,6 +25,7 @@ dependencies:
 - Diff >= 0.3.4 && < 1
 - aeson >= 1.5.5.1 && < 2
 - aeson-qq >= 0.8.3 && < 1
+- async
 - composition >= 1.0.2.1 && < 2
 - extra >= 1.6.17 && < 2
 # - generic-lens
@@ -35,10 +36,17 @@ dependencies:
 - lucid >= 2.9.11 && < 3
 - mtl >= 2.2.2 && < 3
 - neat-interpolation
+- servant
+- servant-lucid
+- servant-server
+- servant-websockets
+- stm
 - streaming
 - text >= 1.2.3.1 && < 2
+- unliftio
 - unordered-containers >= 0.2.13.0 && < 1
 - vector >= 0.12.1.2 && < 1
+- websockets
 
 default-extensions: 
 # GHC 2021
