--- a/liveview-simple.cabal
+++ b/liveview-simple.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9a77ac4346f95cb8a1d2cfc73c59d6813bdda3f6a225908b431e7d9c394003e0
+-- hash: 5b584d18b06022d155438cbd2a263e67e13e30bc9047b62cba72fe3f1ce6b7a6
 
 name:           liveview-simple
 version:        0.1.0.0
@@ -44,6 +44,7 @@ library
     , aeson-qq >=0.8.3 && <1
     , async
     , base >=4.7 && <5
+    , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
     , hashable >=1.3.0.0 && <2
@@ -81,6 +82,7 @@ executable liveview-simple-exe
     , aeson-qq >=0.8.3 && <1
     , async
     , base >=4.7 && <5
+    , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
     , hashable >=1.3.0.0 && <2
@@ -120,6 +122,7 @@ test-suite liveview-simple-test
     , aeson-qq >=0.8.3 && <1
     , async
     , base >=4.7 && <5
+    , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
     , hashable >=1.3.0.0 && <2
