--- a/stack.yaml
+++ b/stack.yaml
@@ -46,6 +46,9 @@ extra-deps:
 - random-1.2.0
 - servant-lucid-0.9.0.1@sha256:17b634fd41c8e14158bbcab5bed6aa7291832396495b3e271a8379dbdbf07e85,1789
 - servant-websockets-2.0.0@sha256:6e9e3600bced90fd52ed3d1bf632205cb21479075b20d6637153cc4567000234,2253
+- streamly-0.7.3@sha256:5c528f670e7313a71971bae465fa04db5f7016471a3edb88eb53c272539970b9,28284
+
+allow-newer: true
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
