--- a/liveview-simple.cabal
+++ b/liveview-simple.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 47469e39c1158449ef26fa22feeaa5905890c51f739163ef7fc9d79973d621d2
+-- hash: 45b2cfce9de933cca362517b99e1b521c9df7e35f7a608b750cea2040497633b
 
 name:           liveview-simple
 version:        0.1.0.0
@@ -52,10 +52,12 @@ library
     , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
+    , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
     , lens
     , lens-aeson
+    , list-t
     , lucid >=2.9.11 && <3
     , mtl >=2.2.2 && <3
     , neat-interpolation
@@ -65,6 +67,7 @@ library
     , servant-server
     , servant-websockets
     , stm
+    , stm-containers
     , streaming
     , streamly
     , text >=1.2.3.1 && <2
@@ -93,10 +96,12 @@ executable liveview-simple-exe
     , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
+    , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
     , lens
     , lens-aeson
+    , list-t
     , liveview-simple
     , lucid >=2.9.11 && <3
     , mtl >=2.2.2 && <3
@@ -107,6 +112,7 @@ executable liveview-simple-exe
     , servant-server
     , servant-websockets
     , stm
+    , stm-containers
     , streaming
     , streamly
     , text >=1.2.3.1 && <2
@@ -136,10 +142,12 @@ test-suite liveview-simple-test
     , bytestring
     , composition >=1.0.2.1 && <2
     , extra >=1.6.17 && <2
+    , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
     , lens
     , lens-aeson
+    , list-t
     , liveview-simple
     , lucid >=2.9.11 && <3
     , mtl >=2.2.2 && <3
@@ -150,6 +158,7 @@ test-suite liveview-simple-test
     , servant-server
     , servant-websockets
     , stm
+    , stm-containers
     , streaming
     , streamly
     , text >=1.2.3.1 && <2
