--- a/package.yaml
+++ b/package.yaml
@@ -30,10 +30,12 @@ dependencies:
 - composition >= 1.0.2.1 && < 2
 - extra >= 1.6.17 && < 2
 # - generic-lens
+- focus
 - hashable >= 1.3.0.0 && < 2
 - hedgehog >= 1.0.4 && < 2
 - lens
 - lens-aeson
+- list-t
 - lucid >= 2.9.11 && < 3
 - MonadRandom
 - mtl >= 2.2.2 && < 3
@@ -44,6 +46,7 @@ dependencies:
 - servant-server
 - servant-websockets
 - stm
+- stm-containers
 - streaming
 - streamly
 - text >= 1.2.3.1 && < 2
