--- a/liveview-simple.cabal
+++ b/liveview-simple.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: df280eda15b320d3cbae112043d27c397aeda73b869674b7832176eae9ebb900
+-- hash: 66867016766eb92e43043b3bccbae3462668ed7ab43c803e2dd4b039b33342ac
 
 name:           liveview-simple
 version:        0.1.0.0
@@ -116,6 +116,7 @@ library
     , stm-containers
     , streaming
     , text >=1.2.3.1 && <2
+    , tuple
     , unliftio
     , unordered-containers >=0.2.13.0 && <1
     , vector >=0.12.1.2 && <1
@@ -204,6 +205,7 @@ executable liveview-simple-exe
     , stm-containers
     , streaming
     , text >=1.2.3.1 && <2
+    , tuple
     , unliftio
     , unordered-containers >=0.2.13.0 && <1
     , vector >=0.12.1.2 && <1
@@ -293,6 +295,7 @@ test-suite liveview-simple-test
     , stm-containers
     , streaming
     , text >=1.2.3.1 && <2
+    , tuple
     , unliftio
     , unordered-containers >=0.2.13.0 && <1
     , vector >=0.12.1.2 && <1
