--- a/package.yaml
+++ b/package.yaml
@@ -54,6 +54,7 @@ dependencies:
 - stm-containers
 - streaming
 - text >= 1.2.3.1 && < 2
+- tuple
 - unliftio
 - unordered-containers >= 0.2.13.0 && < 1
 - vector >= 0.12.1.2 && < 1
