--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,8 @@ dependencies:
 - reducers
 - semigroupoids
 - servant
+- servant-auth
+- servant-auth-server
 - servant-lucid
 - servant-server
 - servant-websockets
