--- a/package.yaml
+++ b/package.yaml
@@ -29,11 +29,13 @@ dependencies:
 - async
 - bytestring
 - composition >= 1.0.2.1 && < 2
+- cookie
 - extra >= 1.6.17 && < 2
 # - generic-lens
 - focus
 - hashable >= 1.3.0.0 && < 2
 - hedgehog >= 1.0.4 && < 2
+- http-types
 - lens
 - lens-aeson
 - list-t
@@ -60,6 +62,8 @@ dependencies:
 - unliftio
 - unordered-containers >= 0.2.13.0 && < 1
 - vector >= 0.12.1.2 && < 1
+- wai
+- wai-websockets
 - warp
 - websockets
 
