--- a/package.yaml
+++ b/package.yaml
@@ -60,6 +60,7 @@ dependencies:
 - stm-containers
 - streaming
 - text >= 1.2.3.1 && < 2
+- transformers-base
 - tuple
 - unliftio
 - unordered-containers >= 0.2.13.0 && < 1
