--- a/package.yaml
+++ b/package.yaml
@@ -65,6 +65,7 @@ dependencies:
 - unliftio
 - unordered-containers >= 0.2.13.0 && < 1
 - vector >= 0.12.1.2 && < 1
+- void
 - wai
 - wai-websockets
 - warp
