--- a/liveview-simple.cabal
+++ b/liveview-simple.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1dad3f68a9cf47db8cbf9a62887eb03dc0fc1176437af773a7c7df11b074f41e
+-- hash: 46f2e12d3f6196f07bcebf2a4fab6bccc5756b37263a7a37420ac9d05827100f
 
 name:           liveview-simple
 version:        0.1.0.0
@@ -99,6 +99,7 @@ library
     , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
+    , hspec
     , http-api-data
     , http-types
     , jose
@@ -198,6 +199,7 @@ executable liveview-simple-exe
     , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
+    , hspec
     , http-api-data
     , http-types
     , jose
@@ -299,6 +301,7 @@ test-suite liveview-simple-test
     , focus
     , hashable >=1.3.0.0 && <2
     , hedgehog >=1.0.4 && <2
+    , hspec
     , http-api-data
     , http-types
     , jose
