--- a/package.yaml
+++ b/package.yaml
@@ -33,6 +33,7 @@ dependencies:
 - extra >= 1.6.17 && < 2
 # - generic-lens
 - focus
+- halive
 - hashable >= 1.3.0.0 && < 2
 - hedgehog >= 1.0.4 && < 2
 - hspec
@@ -131,6 +132,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -dynamic
     dependencies:
     - liveview-simple
 
